--- a/resume.css
+++ b/resume.css
@@ -268,6 +268,18 @@ li {
   line-height: 1.5;
 }
 
+.project-desc a {
+  color: #1a73e8;
+  text-decoration: none;
+  font-weight: 500;
+  transition: color 0.2s;
+}
+
+.project-desc a:hover {
+  text-decoration: underline;
+  color: #0d47a1;
+}
+
 .work-authorization p {
   color: #444;
   line-height: 1.5;
