Add bullet points in front of all projects

--- a/resume.css
+++ b/resume.css
@@ -266,6 +266,15 @@ li {
 .project-desc {
   color: #444;
   line-height: 1.5;
+  position: relative;
+  padding-left: 5px;
+}
+
+.project-bullet {
+  color: #1a73e8;
+  font-size: 1.2rem;
+  margin-right: 10px;
+  display: inline-block;
 }
 
 .project-desc a {
