--- a/resume.css
+++ b/resume.css
@@ -276,7 +276,7 @@ li.indented {
 }
 
 .project-bullet {
-  color: #1a73e8;
+  color: #222;
   font-size: 1.2rem;
   margin-right: 10px;
   display: inline-block;
