--- a/resume.css
+++ b/resume.css
@@ -198,6 +198,14 @@ h2 {
 
 .company, .location {
   color: #666;
+  display: flex;
+  align-items: center;
+}
+
+.company-inline-logo {
+  height: 24px;
+  margin-left: 0;
+  display: inline-block;
 }
 
 .timeframe {
