Move social media links further left

--- a/resume.css
+++ b/resume.css
@@ -103,6 +103,7 @@ h1 {
   display: flex;
   gap: 24px;
   align-items: center;
+  margin-left: -20px;
 }
 
 .icon-container {
@@ -359,6 +360,7 @@ li.indented {
   
   .social-icons {
     justify-content: center;
+    margin-left: 0;
   }
   
   .icon-container {
